--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
           <div class="image-stack-v2">
             <div class="image-stack__item image-stack__item--top">
               <div data-jarallax-element="-100" class="jarallax">
-                <img src="report2.png" alt="Image" class="img-fluid">
+                <img src="rachellct.github.io/report2.png" alt="Image" class="img-fluid">
               </div>
             </div>
             <div class="image-stack__item image-stack__item--bottom">
-              <img src="report3.png" alt="Image" class="img-fluid">
+              <img src="rachellct.github.io/report3.png" alt="Image" class="img-fluid">
             </div>
           </div>
 
