--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
   <link rel="stylesheet" href="css/aos.css">
   <link rel="stylesheet" href="css/style.css">
 
-  <title>Style Free HTML Template by Untree.co</title>
+  <title>Rachel Lau</title>
 </head>
 <body>
   <div class="lines-wrap">
@@ -106,7 +106,7 @@
 
           <h2 class="mb-4">About Me</h2>
           <div class="line my-3"></div>
-          <p align="justify">Hi! My name is Rachel and I am a self-taught data analyst currently working on personal projects. After graduating with a bachelor of science in economics, I have had many hands-on data analytics project experiences in interpreting data, and getting insights out of it.</p>
+          <p align="justify">Hi! My name is Rachel and I am a self-taught data analyst currently working on personal projects and continuing the learning. After graduating with a bachelor of science in economics, I have had many hands-on data analytics project experiences in interpreting data, and getting insights out of it.</p>
 
           <p align="justify">I enjoy exploring data as I believe data can tell meaningful stories, which can help people to make better decisions. Data analysis is just like a treasure hunt, I enjoy interpreting the data and finding treasures (insights) in it.</p>
         
