--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="col-lg-6">
           <h1 class="hero-heading">Hello, I'm Rachel</h1>
           <div  class="line js-line mx-auto mb-3 my-3"></div>
-          <p class="sub-text">Data Analytics | Data Visualize</p>
+          <p class="sub-text">Data Analyst | Data Analytics | Data Visualize</p>
         </Div>
       </Div>
     </div>
