--- a/blog.html
+++ b/blog.html
@@ -108,7 +108,7 @@
             <div class="p-4 bg-white">
               <h3><a href="https://public.tableau.com/app/profile/rachel227/viz/WorldHappiness_16753734510700/Dashboard1">Financial Complaint Dashboard</a></h3>
               <span class="date">Tableau | Dashboard</span>
-              <p>A financial complaint dashboard including its progress rate, customer disputed rate, and other analytics.</p>
+              <p>A financial complaint dashboard analyzing its progress rate, customer disputed rate, and other analytics.</p>
               <p class="more"><a href="https://public.tableau.com/app/profile/rachel227/viz/FinancialComplaint01/Dashboard3">Read more</a></p>
             </div>
           </div>
