--- a/blog.html
+++ b/blog.html
@@ -104,7 +104,7 @@
 
         <div class="col-md-6 mb-5 mb-lg-5 col-lg-4">
           <div class="blog_entry">
-            <a href="https://public.tableau.com/app/profile/rachel227/viz/FinancialComplaint01/Dashboard3"><img src="images/financialdash.png" alt="Free Website Template by Untree.co" class="img-fluid"></a>
+            <a href="https://public.tableau.com/app/profile/rachel227/viz/FinancialComplaint01/Dashboard3"><img src="images/" alt="Free Website Template by Untree.co" class="img-fluid"></a>
             <div class="p-4 bg-white">
               <h3><a href="https://public.tableau.com/app/profile/rachel227/viz/WorldHappiness_16753734510700/Dashboard1">Financial Complaint Dashboard</a></h3>
               <span class="date">Tableau | Dashboard</span>
